# tetris

./: README.md
code/: .gitignore  CMakeLists.txt  InitShader.cpp  game_records.json  glad.c  loadAndSave.cpp  loadAndSave.h  main.cpp  readme.md
code/include/glad/: glad.h
other/: .~大作业 俄罗斯方块.docx  2023271073华浩名-图形学-期中大作业.docx  学号_姓名_期中大作业.doc  实验报告.docx  期中大作业 俄罗斯方块.docx
